# nomocomp

./: .gitignore  README.md  pyproject.toml
benchmarks/: _paths.py  claim_tightening.py  claim_tightening_results.json  fibre_volume_benchmark.py  fibre_volume_results.json  real_data_demo.py  truth_recovery_benchmark.py  truth_recovery_results.json
src/nomocomp/: __init__.py  comparator.py  extraction.py
tests/: conftest.py  test_comparator.py  test_extraction.py
